# milvus

./: README.md  blk.bt  main.py  milvus.py  note.md  pg.py  pgvector.py  pyproject.toml  vfs-pg.bt  vfsstat.bt
docker/milvus/: docker-compose.yml
docker/pgvector/: docker-compose.yml
