[project]
name = "io-vectors"
version = "0.1.0"
description = "Explore vector database I/O pattern"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "numpy>=2.3.0",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pymilvus[model]>=2.5.11",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["black>=25.1.0"]
